--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,157 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
-  </body>
+  <div class="wrapper">
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+
+
+          <% if customer_signed_in? %>
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbarNavDropdown" style>
+              <ul class="navbar-nav ml-auto">
+                <li>
+                  <%= link_to customers_my_page_path, class:"nav-link text-light" do %>
+                    <i class="fas fa-user"></i>
+                    <strong>マイページ</strong>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to restaurants_serch_path, class:"nav-link text-light" do %>
+                    <i class="fas fa-birthday-cake"></i>
+                    <strong>飲食店検索</strong>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to customers_favorite_index_pathh, class:"nav-link text-light" do %>
+                    <i class="fas fa-shopping-cart"></i>
+                    <strong>お気に入り</strong>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to destroy_customer_session_path, method: :delete, class:"nav-link text-light" do %>
+                    <i class="fas fa-sign-out-alt"></i>
+                    <strong>ログアウト</strong>
+                  <% end %>
+                </li>
+              </ul>
+            </div>
+          <% elsif admin_signed_in? %>
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbarNavDropdown" style>
+              <ul class="navbar-nav ml-auto">
+                <li>
+                  <%= link_to admin_customers_path, class:"nav-link text-light" do %>
+                    <i class="fas fa-user"></i>
+                    <strong>顧客一覧</strong>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to admin_allergies_path, class:"nav-link text-light" do %>
+                    <i class="fas fa-birthday-cake"></i>
+                    <strong>アレルゲン一覧</strong>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to admin_customers_path, class:"nav-link text-light" do %>
+                    <i class="fas fa-users"></i>
+                    <strong>会員一覧</strong>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to admin_areas_path, class:"nav-link text-light" do %>
+                    <i class="fas fa-history"></i>
+                    <strong>地域一覧</strong>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to destroy_admin_session_path, method: :delete, class:"nav-link text-light" do %>
+                    <i class="fas fa-sign-out-alt"></i>
+                    <strong>ログアウト</strong>
+                  <% end %>
+                </li>
+              </ul>
+            </div>
+          <% elsif restaurant_signed_in? %>
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbarNavDropdown" style>
+              <ul class="navbar-nav ml-auto">
+                <li>
+                  <%= link_to restaurant_path, class:"nav-link text-light" do %>
+                    <i class="fas fa-user"></i>
+                    <strong>登録情報詳細</strong>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to restaurant_menus_path, class:"nav-link text-light" do %>
+                    <i class="fas fa-birthday-cake"></i>
+                    <strong>メニュー一覧</strong>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to new_restaurant_menu_pathh, class:"nav-link text-light" do %>
+                    <i class="fas fa-users"></i>
+                    <strong>メニュー追加</strong>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to destroy_admin_session_path, method: :delete, class:"nav-link text-light" do %>
+                    <i class="fas fa-sign-out-alt"></i>
+                    <strong>ログアウト</strong>
+                  <% end %>
+                </li>
+              </ul>
+            </div>
+          <% else %>
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbarNavDropdown" style>
+              <ul class="navbar-nav ml-auto">
+                <li>
+                  <%= link_to about_path, class:"nav-link text-light" do %>
+                    <i class="fas fa-store-alt"></i>
+                    <strong>About</strong>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to restaurants_serch_path, class:"nav-link text-light" do %>
+                    <i class="fas fa-birthday-cake"></i>
+                    <strong>飲食店検索</strong>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to new_customer_registration_path, class:"nav-link text-light" do %>
+                    <i class="fas fa-user-plus"></i>
+                    <strong>新規登録</strong>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to new_customer_session_path, class:"nav-link text-light" do %>
+                    <i class="fas fa-sign-in-alt"></i>
+                    <strong>ログイン</strong>
+                  <% end %>
+                </li>
+              </ul>
+            </div>
+          <% end %>
+        </div>
+      </nav>
+    </header>
+
+    <body>
+      <%= yield %>
+    </body>
+
+    <footer class="fixed-bottom">
+      <p class="text-center">(c)copy right</p>
+    </footer>
+  </div>
 </html>
