Create view of admin/allergies

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,13 +24,11 @@
               <ul class="navbar-nav ml-auto">
                 <li>
                   <%= link_to customers_my_page_path, class:"nav-link text-light" do %>
-                    <i class="fas fa-user"></i>
                     <strong>マイページ</strong>
                   <% end %>
                 </li>
                 <li>
                   <%= link_to restaurants_serch_path, class:"nav-link text-light" do %>
-                    <i class="fas fa-birthday-cake"></i>
                     <strong>飲食店検索</strong>
                   <% end %>
                 </li>
@@ -42,7 +40,6 @@
                 </li>
                 <li>
                   <%= link_to destroy_customer_session_path, method: :delete, class:"nav-link text-light" do %>
-                    <i class="fas fa-sign-out-alt"></i>
                     <strong>ログアウト</strong>
                   <% end %>
                 </li>
@@ -56,31 +53,26 @@
               <ul class="navbar-nav ml-auto">
                 <li>
                   <%= link_to admin_customers_path, class:"nav-link text-light" do %>
-                    <i class="fas fa-user"></i>
                     <strong>顧客一覧</strong>
                   <% end %>
                 </li>
                 <li>
                   <%= link_to admin_allergies_path, class:"nav-link text-light" do %>
-                    <i class="fas fa-birthday-cake"></i>
                     <strong>アレルゲン一覧</strong>
                   <% end %>
                 </li>
                 <li>
                   <%= link_to admin_customers_path, class:"nav-link text-light" do %>
-                    <i class="fas fa-users"></i>
                     <strong>会員一覧</strong>
                   <% end %>
                 </li>
                 <li>
                   <%= link_to admin_areas_path, class:"nav-link text-light" do %>
-                    <i class="fas fa-history"></i>
                     <strong>地域一覧</strong>
                   <% end %>
                 </li>
                 <li>
                   <%= link_to destroy_admin_session_path, method: :delete, class:"nav-link text-light" do %>
-                    <i class="fas fa-sign-out-alt"></i>
                     <strong>ログアウト</strong>
                   <% end %>
                 </li>
@@ -94,7 +86,6 @@
               <ul class="navbar-nav ml-auto">
                 <li>
                   <%= link_to restaurant_path, class:"nav-link text-light" do %>
-                    <i class="fas fa-user"></i>
                     <strong>登録情報詳細</strong>
                   <% end %>
                 </li>
@@ -106,13 +97,11 @@
                 </li>
                 <li>
                   <%= link_to new_restaurant_menu_pathh, class:"nav-link text-light" do %>
-                    <i class="fas fa-users"></i>
                     <strong>メニュー追加</strong>
                   <% end %>
                 </li>
                 <li>
                   <%= link_to destroy_admin_session_path, method: :delete, class:"nav-link text-light" do %>
-                    <i class="fas fa-sign-out-alt"></i>
                     <strong>ログアウト</strong>
                   <% end %>
                 </li>
@@ -126,25 +115,21 @@
               <ul class="navbar-nav ml-auto">
                 <li>
                   <%= link_to about_path, class:"nav-link text-light" do %>
-                    <i class="fas fa-store-alt"></i>
                     <strong>About</strong>
                   <% end %>
                 </li>
                 <li>
                   <%= link_to restaurants_serch_path, class:"nav-link text-light" do %>
-                    <i class="fas fa-birthday-cake"></i>
                     <strong>飲食店検索</strong>
                   <% end %>
                 </li>
                 <li>
                   <%= link_to new_customer_registration_path, class:"nav-link text-light" do %>
-                    <i class="fas fa-user-plus"></i>
                     <strong>新規登録</strong>
                   <% end %>
                 </li>
                 <li>
                   <%= link_to new_customer_session_path, class:"nav-link text-light" do %>
-                    <i class="fas fa-sign-in-alt"></i>
                     <strong>ログイン</strong>
                   <% end %>
                 </li>
@@ -160,7 +145,7 @@
     </body>
 
     <footer class="fixed-bottom">
-      <p class="text-center">(c)copy right</p>
+      <p class="text-center"></p>
     </footer>
   </div>
 </html>
