--- a/app/views/admin/allergies/edit.html.erb
+++ b/app/views/admin/allergies/edit.html.erb
@@ -1,2 +1,23 @@
-<h1>アレルギー編集画面</h1>
-<p>Find me in app/views/admin/allergys/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class='col-12'>
+      <h4 class="col-3 mt-5">アレルゲン編集</h4>
+
+
+      <div class="row">
+        <div class='col-5 mt-5'>
+          <%= form_with model: @allergy, url: admin_allergy_path, method: :patch do |f| %>
+
+            <div class="field d-grid col-10 mt-4">
+              <%= f.label :アレルゲン, class: "w-25" %>
+              <%= f.text_field :allergen %>
+            </div>
+            <div class="row form-group mt-4 offset-3">
+              <%= f.submit '編集', class:"btn btn-success col-3" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
