--- a/app/views/admin/allergies/index.html.erb
+++ b/app/views/admin/allergies/index.html.erb
@@ -1,25 +1,40 @@
 <div class="container">
   <div class="row">
-    <div class='col-10 offset-1'>
+    <div class='col-12'>
       <h4 class="col-3 mt-5">アレルゲン一覧・追加</h4>
 
 
       <div class="row">
-        <div class='col-4'>
+        <div class='col-5 mt-5'>
           <%= form_with model: @allergy, url: admin_allergies_path, method: :post do |f| %>
 
-            <div class="field d-grid col-8 text-center mt-4">
+            <div class="field d-grid col-10 mt-4">
               <%= f.label :アレルゲン, class: "w-25" %>
-              <%= f.text_field :allergen, class: "col-6" %>
+              <%= f.text_field :allergen %>
             </div>
-            <div class="row form-group mt-4 ml-35">
-              <%= f.submit '新規登録', class:"btn btn-success col-2" %>
+            <div class="row form-group mt-4 offset-3">
+              <%= f.submit '新規登録', class:"btn btn-success col-3" %>
             </div>
           <% end %>
         </div>
+
+        <table class="table table-hover col-6">
+          <thead class="table-secondary">
+            <th>アレルゲン</th>
+            <th></th>
+          </thead>
+          <% @allergies.each do |allergy| %>
+            <tr>
+              <td>
+                <%= allergy.allergen %>
+              </td>
+              <td>
+                <%= link_to "編集", edit_admin_allergy_path(allergy.id), class:"btn btn-success"%>
+              </td>
+            </tr>
+          <% end %>
+        </table>
       </div>
-
-
     </div>
   </div>
 </div>
