--- a/app/views/admin/areas/index.html.erb
+++ b/app/views/admin/areas/index.html.erb
@@ -1,2 +1,19 @@
-<h1>地域エリア一覧画面</h1>
-<p>Find me in app/views/admin/areas/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class='col-12'>
+      <h4 class="col-3 mt-5">地域エリア一覧</h4>
+
+      <div class="row">
+        <table class="table table-hover col-8">
+          <thead class="table-secondary">
+            <th>地域エリア</th>
+          </thead>
+          <% @area.each do |area| %>
+            <tr>
+              <td>
+                <%= area.area %>
+              </td>
+            </tr>
+          <% end %>
+        </table>
+      </div>
