Create view of admin/areas

--- a/app/views/admin/areas/index.html.erb
+++ b/app/views/admin/areas/index.html.erb
@@ -8,7 +8,7 @@
           <thead class="table-secondary">
             <th>地域エリア</th>
           </thead>
-          <% @area.each do |area| %>
+          <% @areas.each do |area| %>
             <tr>
               <td>
                 <%= area.area %>
