--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to admin_areas_path, class:"nav-link text-light" do %>
+                  <%= link_to admin_areas_index_path, class:"nav-link text-light" do %>
                     <strong>地域一覧</strong>
                   <% end %>
                 </li>
