--- a/app/views/customer/homes/about.html.erb
+++ b/app/views/customer/homes/about.html.erb
@@ -1,1 +1,19 @@
-<h1>Aboutページ</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 offset-1">
+      <% if flash[:notice] %>
+        <%= notice %>
+      <% end %>
+      <div class="title_image">
+        <div class="row title_image2 align-items-end">
+          <p class="ml-3">ようこそ、ながのCAKEへ！<br>
+          このサイトは、ケーキ販売のECサイトになります。<br>
+          会員でない方も商品の閲覧はできますが、<br>
+          購入には会員登録が必要になります。</p>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+</div>
