--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -167,7 +167,7 @@
           <%= link_to new_restaurant_registration_path, class:"nav-link text-light" do %>
             <strong>店舗新規会員登録</strong>
           <% end %>
-          <%= link_to new_admin_session_path, class:"nav-link text-light" do %>
+          <%= link_to new_restaurant_session_path, class:"nav-link text-light" do %>
             <strong>店舗ログイン</strong>
           <% end %>
         </div>
