--- a/app/views/restaurant/registrations/new.html.erb
+++ b/app/views/restaurant/registrations/new.html.erb
@@ -18,12 +18,12 @@
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :店舗住所（都道府県）, class: "col-md-4 text-left" %>
-          <%= f.text_field :state, autofocus: true, class: "col-md-3" %>
+          <%= f.collection_select :farm_states , State.all,:state,:state, id: 'stateSelect'%>
         </div>
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :店舗住所（地域エリア）, class: "col-md-4 text-left" %>
-          <%= f.email_field :area, required: true, class: "col-md-3" %>
+          <%= f.collection_select :farm_area , Area.all,:area,:area,id: 'areaSelect' %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
@@ -60,14 +60,14 @@
           <%= f.submit "新規登録", class: "btn btn-success mx-auto btn-lg" %>
         </div>
 
-        <h6 class="col-2 mt-4">既に登録済み方</h6>
+        <h6 class="col-3 mt-4">既に登録済みの方</h6>
         <div class="row offset-1">
           <a class ="member_registration" href = "/restaurants/sign_in">こちら</a>
           <span>からログインしてください。</span>
         </div>
       <% end %>
 
-      <%= render "restaurant/shared/links" %>
+      <!--<%= render "restaurant/shared/links" %>-->
     </div>
   </div>
 </div>
