--- a/app/views/customer/customers/confirm.html.erb
+++ b/app/views/customer/customers/confirm.html.erb
@@ -1,1 +1,12 @@
-<h1>顧客の退会確認画面</h1>
+<div class= "container">
+  <div class='row mb-3 mt-5'>
+    <div class='col-10 offset-1'>
+      <h5 class="mt-5 text-center"><strong>本当に退会しますか</strong></h5>
+      <p class="mt-4 text-center">退会すると、会員登録情報や<br>
+      これまでの購入履歴が閲覧できなくなります。<br>
+      退会する場合は「退会する」をクリックしてください</p>
+
+<div class="mt-4 text-center">
+  <%= link_to "退会しない", customers_my_page_path(@customer), class:"btn btn-primary"%>
+  <%= link_to "退会する", customers_out_path(@customer),"data-confirm" => "本当に退会しますか？", method: :patch, class:"btn btn-danger ml-5"%>
+</div>
