--- a/app/views/customer/customers/show.html.erb
+++ b/app/views/customer/customers/show.html.erb
@@ -1,1 +1,41 @@
-<h1>Myページ</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-10 offset-1">
+      <% if flash[:notice] %>
+        <%= notice %>
+      <% end %>
+      <h4 class="col-4 mt-5">マイページ</h4>
+
+      <table class="table table-hover table-inverse item-show mt-4">
+        <h5 class="mt-4">
+          登録情報
+          <%= link_to "編集する", customers_information_edit_path, class:"btn btn-success ml-4"%>
+        </h5>
+        <tr>
+          <th>氏名</th>
+          <td><%= @customer.full_name %></td>
+        </tr>
+        <tr>
+          <th>カナ</th>
+          <td><%= @customer.full_name_kana %></td>
+        </tr>
+        <tr>
+          <th>メールアドレス</th>
+          <td><%= @customer.email %></td>
+        </tr>
+        <tr>
+          <th>都道府県</th>
+          <td><%= @customer.state_id%></td>
+        </tr>
+        <tr>
+          <th>地域エリア</th>
+          <td><%= @customer.area_id %></td>
+        </tr>
+        <tr>
+          <th>電話番号</th>
+          <td><%= @customer.telephone_number %></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
