Change show of customer/customers

--- a/app/views/customer/customers/show.html.erb
+++ b/app/views/customer/customers/show.html.erb
@@ -13,7 +13,9 @@
         </h5>
         <tr>
           <th>氏名</th>
-          <td><%= @customer.full_name %></td>
+          <td><%= @customer.full_name %>
+
+          </td>
         </tr>
         <tr>
           <th>カナ</th>
@@ -25,11 +27,11 @@
         </tr>
         <tr>
           <th>都道府県</th>
-          <td><%= @customer.state_id%></td>
+          <td><%= @state %></td>
         </tr>
         <tr>
           <th>地域エリア</th>
-          <td><%= @customer.area_id %></td>
+          <td><%= @area %></td>
         </tr>
         <tr>
           <th>電話番号</th>
