Change view of application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -140,7 +140,7 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to new_customer_registration_path, class:"nav-link text-light" do %>
+                  <%= link_to new_customer_registration_path, class:"nav-link text-light", data: {"turbolinks": false} do %>
                     <strong>新規登録</strong>
                   <% end %>
                 </li>
