Create controller of restaurant/companies_controller

--- a/app/views/customer/registrations/new.html.erb
+++ b/app/views/customer/registrations/new.html.erb
@@ -42,7 +42,7 @@
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :電話番号（ハイフンなし）, class: "col-md-4 text-left" %><br />
-          <%= f.number_field :telephone_number, autofocus: true, class: "col-md-3" %>
+          <%= f.text_field :telephone_number, autofocus: true, class: "col-md-3" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
