--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -164,7 +164,7 @@
     <footer class="text-white pt-5 pb-4">
       <div class="row no-gutters">
         <div class="col-ms-4">
-          <%= link_to new_restaurant_registration_path, class:"nav-link text-light" do %>
+          <%= link_to new_restaurant_registration_path, class:"nav-link text-light", data: {"turbolinks": false} do %>
             <strong>店舗新規会員登録</strong>
           <% end %>
           <%= link_to new_restaurant_session_path, class:"nav-link text-light" do %>
